SalesForce/Assignment_13/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Curr_Birthday__c</fullName>
        <formula>IF( AND(DAY(TODAY()) &gt; DAY(Birthdate), MONTH(TODAY()) &gt;= MONTH(Birthdate))  ,  DATE( YEAR( TODAY() +1) ,MONTH(Birthdate),DAY(Birthdate)) , DATE( YEAR( TODAY()) ,MONTH(Birthdate),DAY(Birthdate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Curr_Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subjects__c</fullName>
        <label>Subjects</label>
        <picklist>
            <picklistValues>
                <fullName>Hindi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maths</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>PGT</fullName>
        <active>true</active>
        <label>PGT</label>
    </recordTypes>
    <recordTypes>
        <fullName>TGT</fullName>
        <active>true</active>
        <label>TGT</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
   NOT(ISBLANK( AccountId )),
   ( MailingPostalCode  =  Account.ShippingPostalCode__c  )
)</errorConditionFormula>
        <errorMessage>Validation Error</errorMessage>
    </validationRules>
</CustomObject>